--- a/.github/workflows/release-5-deploy-pages.yml
+++ b/.github/workflows/release-5-deploy-pages.yml
@@ -49,64 +49,30 @@ jobs:
         ref: main
         fetch-depth: 0
     
-    - name: Determine version
-      id: version
+    - name: Verify hashes folder exists
       shell: pwsh
       run: |
-        if ("${{ github.event_name }}" -eq "workflow_dispatch") {
-          $inputVersion = "${{ github.event.inputs.version }}"
-          if ($inputVersion) {
-            $version = $inputVersion
-          } else {
-            # Get version from latest release
-            $tags = git tag -l --sort=-v:refname
-            if ($tags) {
-              $version = $tags[0]
-            } else {
-              Write-Host "##[error] No version specified and no tags found"
-              exit 1
-            }
-          }
-        } else {
-          # Extract version from PR title: "chore: add provider hash manifest for 1.2.3"
-          $prTitle = "${{ github.event.pull_request.title }}"
-          if ($prTitle -match "for (.+)$") {
-            $version = $matches[1]
-          } else {
-            Write-Host "##[error] Could not extract version from PR title: $prTitle"
-            exit 1
-          }
-        }
-        
-        Write-Host "Deploying GitHub Pages for version: $version"
-        echo "VERSION=$version" >> $env:GITHUB_OUTPUT
-    
-    - name: Verify hash file exists
-      shell: pwsh
-      run: |
-        $version = "${{ steps.version.outputs.VERSION }}"
-        $hashFile = "hashes/$version.json"
-        
-        if (!(Test-Path $hashFile)) {
-          Write-Host "##[error] Hash file not found: $hashFile"
-          Write-Host "##[error] Available hash files in /hashes:"
-          if (Test-Path "hashes") {
-            Get-ChildItem -Path "hashes" -Filter "*.json" | ForEach-Object { Write-Host "  - $($_.Name)" }
-          } else {
-            Write-Host "##[error] /hashes folder does not exist!"
-          }
+        if (!(Test-Path "hashes")) {
+          Write-Host "##[error] /hashes folder does not exist!"
           exit 1
         }
         
-        Write-Host "✓ Found hash file: $hashFile"
+        $hashFiles = Get-ChildItem -Path "hashes" -Filter "*.json" -File
+        if ($hashFiles.Count -eq 0) {
+          Write-Host "##[error] No hash files found in /hashes folder"
+          exit 1
+        }
+        
+        Write-Host "✓ Found $($hashFiles.Count) hash file(s) in /hashes folder:"
+        foreach ($file in $hashFiles) {
+          Write-Host "  - $($file.Name)"
+        }
     
     - name: Generate GitHub Pages Content
       uses: ./.github/actions/generate-github-pages
       with:
-        hash-file: hashes/${{ steps.version.outputs.VERSION }}.json
-        version: ${{ steps.version.outputs.VERSION }}
+        hashes-folder: 'hashes'
         pages-directory: '.github/pages'
-        update-latest: 'auto'
         repository: ${{ github.repository }}
     
     - name: Upload GitHub Pages Artifact
