--- a/Solution.props
+++ b/Solution.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.4.0-alpha</SolutionVersion>
+    <SolutionVersion>1.4.1-dev.260223</SolutionVersion>
   </PropertyGroup>
 </Project>
